--- a/_Imports.razor
+++ b/_Imports.razor
@@ -8,3 +8,7 @@
 @using Microsoft.JSInterop
 @using UserRegClient
 @using UserRegClient.Layout
+
+@using Radzen
+@using Radzen.Blazor
+@using static Microsoft.AspNetCore.Components.Web.RenderMode
