--- a/App.razor
+++ b/App.razor
@@ -1,4 +1,9 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
+﻿<html>
+    <head>
+        <RadzenTheme Theme="material" @rendermode="InteractiveAuto" />
+    </head>
+    <body>
+<Router AppAssembly="@typeof(App).Assembly">
     <Found Context="routeData">
         <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
         <FocusOnNavigate RouteData="@routeData" Selector="h1" />
@@ -10,3 +15,6 @@
         </LayoutView>
     </NotFound>
 </Router>
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js?v=@(typeof(Radzen.Colors).Assembly.GetName().Version)"></script>
+    </body>
+</html>
