добавлены кнопки для дальнейшего развития

--- a/Pages/UserPage.razor
+++ b/Pages/UserPage.razor
@@ -5,18 +5,26 @@
 @using System.Collections.ObjectModel;
 @inject HttpClient Http
 
+@inject NotificationService NotificationService
 @using UserRegClient.Models
 
 <PageTitle>User Page</PageTitle>
 <h1>User Information</h1>
 
+<RadzenStack Orientation="Orientation.Horizontal" AlignItems="AlignItems.Center" Gap="1rem" Wrap="FlexWrap.Wrap">
+    <RadzenButton Variant="Variant.Outlined" Click=@(args => OnClick("Я кнопка добавить")) Text="Добавить" ButtonStyle="ButtonStyle.Primary" />
+    <RadzenButton Variant="Variant.Outlined" Click=@(args => OnClick("Я кнопка изменить")) Text="Изменить" ButtonStyle="ButtonStyle.Secondary" />
+    <RadzenButton Variant="Variant.Outlined" Click=@(args => OnClick("Я кнопка удалить")) Text="Удалить" ButtonStyle="ButtonStyle.Base" />
+</RadzenStack>
 
 @if (users == null)
 {
     <p><em>Loading...</em></p>
 }
 else
-{    
+{   
+
+
     <RadzenRow Gap="1rem">
         <RadzenColumn Size="12" SizeMD="6">
             <RadzenDataGrid ColumnWidth="200px" AllowFiltering="true" AllowPaging="true" PageSize="5" AllowSorting="true" Data="@users" @bind-Value="SelectedUsers">
@@ -31,7 +39,7 @@ else
         </RadzenColumn>
         <RadzenColumn Size="12" SizeMD="6">
                 <RadzenStack Gap="1rem">
-                    User Rank
+                    <h3>User Rank</h3>
                  <RadzenDataGrid AllowFiltering="true" AllowPaging="true" AllowSorting="true" Data="SelectedUsers.FirstOrDefault()?.SpecialistRank">
                         <Columns>
                             <RadzenDataGridColumn Property="@nameof(SpecialistRank.Id_rank)" Filterable="false" Title="Id_rank" Frozen="true" Width="80px" TextAlign="TextAlign.Center" />
@@ -61,6 +69,11 @@ else
             getRankGrid.Add(c);
         }
        SelectedUsers = new List<User>(){getRankGrid.FirstOrDefault()}; 
+    }
+
+    private void OnClick(string text)
+    {
+        NotificationService.Notify(new NotificationMessage { Severity = NotificationSeverity.Info, Summary = "Кнопка", Detail = text });
     }
 }    
 
